# barcodes

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  requirements.txt  setup.cfg
barcodes/: __init__.py  __main__.py
barcodes/webapp/: __init__.py
barcodes/webapp/templates/: index.html  products.html
prototype/: barcodes.ipynb  products-3dxtech-2021-05-05.csv  requirements.txt
