[metadata]
name = barcodes
version = 0.0.1
author = Bohumir Zamecnik
author_email = bohumir.zamecnik@gmail.com
description = Generate product barcode stickers to PDF.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bzamecnik/barcodes
project_urls =
    Bug Tracker = https://github.com/bzamecnik/barcodes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .

