[metadata]
name = barcodes
version = 0.0.1
author = Bohumir Zamecnik
author_email = bohumir.zamecnik@gmail.com
description = Generate product barcode stickers to PDF.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bzamecnik/barcodes
project_urls =
    Bug Tracker = https://github.com/bzamecnik/barcodes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    reportlab

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    barcodes = barcodes.__main__:main
